# tenbis

./: .env.example  .gitignore  AGENTS.md  README.md  mise.toml  pyproject.toml
scripts/: bootstrap-server.sh
src/tenbis/: browser.py  cli.py  imaging.py  logger.py  selectors.py  settings.py  tenbis_flow.py  vouchers.py  whatsapp.py
systemd/: tenbis.service  tenbis.timer
tests/: test_vouchers.py
